src-ken&y/objects/Process_Request__c.object
<CustomObject>
    <description>This object stores the request information for processing various actions in the system.</description>
    <fields>
        <fullName>Bin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bin</label>
        <referenceTo>Bin__c</referenceTo>
        <relationshipLabel>Process Requests</relationshipLabel>
        <relationshipName>Process_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Process Requests</relationshipLabel>
        <relationshipName>Process_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Count_Quantity__c</fullName>
        <label>Count Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exceptions_Count__c</fullName>
        <label>Exceptions Count</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facility</label>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Process Requests</relationshipLabel>
        <relationshipName>Process_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fixed_Asset__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fixed Asset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Exceptions__c</fullName>
        <formula>Exceptions_Count__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Exceptions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Process Requests</relationshipLabel>
        <relationshipName>Process_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>License_Plate_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License Plate Number</label>
        <referenceTo>LPN__c</referenceTo>
        <relationshipLabel>Process Requests</relationshipLabel>
        <relationshipName>Process_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Process Requests</relationshipLabel>
        <relationshipName>Process_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lot_Number__c</fullName>
        <label>Lot Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minimum_Shelf_Life_In_Days__c</fullName>
        <label>Minimum Shelf Life In Days</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Packaging_UOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Packaging UOM</label>
        <referenceTo>UOM__c</referenceTo>
        <relationshipLabel>Process Requests</relationshipLabel>
        <relationshipName>Process_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parameter_Body__c</fullName>
        <description>The parameters for the request as a JSON object.</description>
        <label>Parameter Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parameter_Name__c</fullName>
        <label>Parameter Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parameter_Value__c</fullName>
        <description>Single parameter value for the request. If there are more than one parameter, or the parameter contains custom data structures, use &apos;Parameter Body&apos; field instead.</description>
        <label>Parameter Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Call__c</fullName>
        <description>The process that the request is made for.</description>
        <label>Process Call</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pick Shipment Line</fullName>
                </value>
                <value>
                    <fullName>UndoPick Shipment Line</fullName>
                </value>
                <value>
                    <fullName>Cycle Count</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reason Code</label>
        <referenceTo>Reason_Code__c</referenceTo>
        <relationshipLabel>Process Requests</relationshipLabel>
        <relationshipName>Process_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rental__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rental</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The current status of the request.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Document_Id__c</fullName>
        <description>The Id of the document in the system against which the action has to be executed.</description>
        <label>Target Document Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Used__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Used</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>Work_Order__c</referenceTo>
        <relationshipLabel>Process Requests</relationshipLabel>
        <relationshipName>Process_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Process Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PR-{0000000000}</displayFormat>
        <label>Process Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Process Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>